# claude-profiles

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  commands.rs  config.rs  main.rs  profile.rs
tests/: integration_test.rs
