[package]
name = "claude-profiles"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Claude Code profiles"
authors = ["Vitalii Vlasov"]
license = "MIT"

[[bin]]
name = "ccp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"
dialoguer = "0.11"
anyhow = "1"
thiserror = "1"
similar = "2"
chrono = "0.4"
